# RKTK

./: .gitignore  BFGSOptimizer.hpp  CMakeLists.txt  LICENSE  LinearAlgebraSubroutines.hpp  ObjectiveFunction.cpp  ObjectiveFunction.hpp  OptimizerDriver.hpp  OrderConditionEvaluator.hpp  OrderConditionEvaluatorMPFR.hpp  OrderConditionHelpers.cpp  OrderConditionHelpers.hpp  OrderConditionHelpersMPFR.hpp  QuadraticLineSearcher.hpp  README.md  RKTKCompare.jl  RKTKComputeB.jl  RKTKConstrainedSearch.jl  RKTKFindRelations.jl  RKTKFreeze.jl  RKTKIncrementalSearch.jl  RKTKLocalDimension.jl  RKTKMerge.jl  RKTKMinimizeNorm.jl  RKTKParallelRefine.jl  RKTKParallelRefine.sh  RKTKParallelSearch.jl  RKTKPrincipalError.jl  RKTKProjectionSearch.jl  RKTKRefine.jl  RKTKSearch.jl  RKTKUtilities.jl  RKTKValidate.jl  bfgs_subroutines.hpp  compile-gcc.sh  compile-win.bat  compile_intel.sh  lint-win.bat  nonlinear_optimizers.hpp  rkeval-main.cpp  (+6 more)
inc/: OrderConditionHelpers.hpp  bfgs_subroutines.hpp  linalg_subroutines.hpp  nonlinear_optimizers.hpp  objective_function.hpp
legacy/: ConstrainedBFGSTest.jl  DistributedExplorer.jl  ErrorCoefficientBFGS.jl  ErrorCoefficientOptimizer.jl  GoldenSectionSearch.jl  OptimizerDriver.hpp  OrderConditionData.hpp  OrderConditionHelpers.hpp  OrderConditionHelpersMPFR.hpp  QuadFloat.jl  compile-win.bat  rkeval-main.cpp  rktk-refinement-worker.py
methods/: Feagin10.txt  Feagin12.txt  Feagin14.txt  Hairer10.txt  Zhang10.txt
rkeval/: ObjectiveFunctionData.h  ObjectiveFunctionData.hpp  ObjectiveFunctionHelpers.h  ObjectiveFunctionHelpers.hpp  RK4.txt  input.txt  (+6 more)
(+99 files in other folders)
